fix: 🩹 mdx content grid gap a little bit too big

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,7 +54,7 @@
   @media screen and (min-width: theme('screens.md')) {
     .mdx-main-content-grid {
       grid-template-columns: 16rem 1fr;
-      gap: 0px 1em;
+      gap: 0px 0.25em;
       grid-template-areas: 'aside main';
     }
   }
